# hands-on-ai-rag-using-llamaindex-3830207

./: .gitignore  README.md  pyproject.toml
01_Getting_Started/: 01_07_Downloading_Our_Data.ipynb
data/: pg1.txt  pg2.txt  pg3.txt  pg4.txt  pg6.txt  pg7.txt  pg8.txt  pg9.txt
docs/: 01_02_Setting_Up_Your_Enviornment.md  04_01_Introduction_to_RAG_Evaluation.md  05_01_How_We_Can_Improve_on_Naive_RAG.md
docs/notebooks/02_Fundamental_Concepts_in_LlamaIndex/: 02_02_Using_LLMs.ipynb  02_03_Loading_Data.ipynb
src/llamaindex_rag/: __init__.py
src/llamaindex_rag/helpers/: utils.py
src/llamaindex_rag/libs/: __init__.py  config.py  document.py  embedding.py
src/llamaindex_rag/modules/: __init__.py
src/llamaindex_rag/modules/embedding/: __init__.py  embed.py
src/llamaindex_rag/modules/ingestion/: __init__.py  ingest.py
