[project]
name = "hands-on-ai-rag-using-llamaindex-3830207"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "llama-index (==0.12.49)",
    "qdrant-client (==1.15.0)",
    "llama-index-vector-stores-qdrant (==0.6.1)",
    "llama-index-readers-file (==0.4.11)",
    "cohere (==5.16.1)",
    "openai (==1.97.0)",
    "llama-index-llms-cohere (==0.5.0)",
    "llama-index-llms-openai (==0.4.7)",
    "llama-index-embeddings-cohere (==0.5.1)",
    "llama-index-embeddings-openai (==0.3.1)",
    "llama-index-postprocessor-cohere-rerank (==0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
